wrote .column css to correct div alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,18 +20,26 @@
   .container {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    height: 100vh;
     padding-top: 30px;
     padding-left: 20px;
     padding-right: 20px;
   }
 
   .row {
-    width: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     flex-direction: row;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
   header {
